fixing lignt_dark mode

--- a/minor_project/src/components/Navbar/Navbar.css
+++ b/minor_project/src/components/Navbar/Navbar.css
@@ -1,72 +1,84 @@
-.navbar{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: white;
-    padding: 15px 7%;
-    transition: 0.5s;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  padding: 15px 7%;
+  transition: background 0.5s, color 0.5s;
 }
-.logo{
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-}
-ul{
-    flex: 1;
-    list-style: none;
-    text-align: center;
-}
-ul li{
-    display: inline-block;
-    margin: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    font-weight: bolder;
 
+body.dark .navbar {
+  background: #121212;
+  color: white;
 }
-.toggle-icon{
-    width: 50px;
-    cursor: pointer;
-    margin-left: 40px;
 
+.logo {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
 }
-.search-box{
-    display: flex;
-    align-items: center;
-    background: #242424;
-    margin: 10px 20px;
-    border-radius: 50px;
+
+ul {
+  flex: 1;
+  list-style: none;
+  text-align: center;
 }
-.search-box input{
-    padding: 6px;
-    background: transparent;
-    border: 0;
-    outline: 0;
-    font-size: 18px;
-    max-width: 200px;
-    margin-left: 20px;
+
+ul li {
+  display: inline-block;
+  margin: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bolder;
 }
-.search-box input::placeholder{
-    color: white;
-    margin-left: 10px;
-} 
-.search-box img{
-    margin-right: 20px;
-    width: 20px;
-    cursor: pointer;
+
+.toggle-icon {
+  width: 50px;
+  cursor: pointer;
+  margin-left: 40px;
 }
-.dark .navbar{
-    background: #000;
-    color: #fff;
+
+.search-box {
+  display: flex;
+  align-items: center;
+  background: #242424;
+  margin: 10px 20px;
+  border-radius: 50px;
 }
- .dark .search-box{
-    background: #fff;
-} 
- .dark .search-box input{
-    
-    background: #fff;
-} 
-.dark .search-box input::placeholder{
-    color: #000;
+
+body.light .search-box {
+  background: #242424;
+}
+
+body.dark .search-box {
+  background: #fff;
+}
+
+.search-box input {
+  padding: 6px;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  max-width: 200px;
+  margin-left: 20px;
+  color: white;
+}
+
+body.dark .search-box input {
+  color: black;
+}
+
+.search-box input::placeholder {
+  color: white;
+}
+
+body.dark .search-box input::placeholder {
+  color: black;
+}
+
+.search-box img {
+  margin-right: 20px;
+  width: 20px;
+  cursor: pointer;
 }
